@@ -37,7 +37,15 @@ AT_CHECK([$COBC -c prog.c], [0], [], [])
 AT_CHECK([$COBC prog.$OBJECT_EXT])
 AT_CHECK([$COBCRUN prog], [0], [bluBb], [])
 AT_CHECK([$COBC -S prog.cob], [0], [], [])
-#AT_CHECK([$COBC prog.$ASM_EXT]) Currently breaking with MSC, deactivated
+AT_CHECK([$COBC prog.s])
+AT_CHECK([$COBCRUN prog], [0], [bluBb], [])
+AT_CHECK([$COBC -x -C prog.cob], [0], [], [])
+AT_CHECK([$COBC -x -c prog.c], [0], [], [])
+AT_CHECK([$COBC -x prog.$OBJECT_EXT])
+AT_CHECK([./prog], [0], [bluBb], [])
+AT_CHECK([$COBC -x -S prog.cob], [0], [], [])
+AT_CHECK([$COBC -x prog.s])
+AT_CHECK([./prog], [0], [bluBb], [])
 AT_CHECK([$COBC -E prog.cob], [0], [], [])
 AT_CHECK([test -f prog.i], [0], [], [])
 AT_CLEANUP
